[build-system]
requires = ["setuptools",
            "setuptools_scm",
            "wheel"]
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 80
target-version = ['py36']
exclude = '''
(
  /(
      \.eggs         # all directories in the root of the project
    | \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | \.svn
    | _build
    | buck-out
    | build
    | dist
  )/
  | setup.py
  | docs/conf.py
  | _astropy_init.py
)
'''

[tool.interrogate]
color = true
#exclude = ["setup.py", "docs", "build"]
#fail-under = 90
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-private = true
ignore-property-decorators = true
#ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
ignore-semiprivate = true
ignore-setters = true
omit-covered-files = false
quiet = false
verbose = 0
#whitelist-regex = []
