[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build tardis/tests/integration_tests

[ah_bootstrap]
auto_use = True

[metadata]
package_name = tardis
description = TARDIS - Temperature And Radiative Diffusion In Supernovae
long_description = TARDIS - Temperature And Radiative Diffusion In Supernovae
author = TARDIS Team
author_email = wkerzendorf@gmail.com
license = BSD (3 clause)
url = http://tardis.readthedocs.org/
edit_on_github = False
github_project = tardis-sn/tardis
