[metadata]
name = tardis
author = TARDIS Collaboration
author_email = wkerzendorf@gmail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://tardis-sn.github.io/tardis
description = TARDIS - Temperature And Radiative Diffusion In Supernovae
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = tardis-sn/tardis

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
tardis = 
    data/*
tardis.grid = 
    tests/data/*
    ./*
tardis.io = 
    configuration/schemas/*
    configuration/tests/data/*
    model/readers/tests/data/*
tardis.model.tests = data/*
tardis.montecarlo.tests = data/*
tardis.plasma.tests = data/*
tardis.scripts = debug/*
tardis.tests.integration_tests = **/* 
tardis.visualization = 
    tools/tests/data/*

[tool:pytest]
testpaths = "tardis" # "docs"
astropy_header = true
# doctest_plus = disabled
text_file_format = rst
# addopts = --doctest

# The following coverage configuration works only with `tox`. We keep our 
# coverage configuration in `.coveragerc`.
[coverage:run]
omit =
    tardis/_astropy_init*
    tardis/conftest.py
    tardis/*setup_package*
    tardis/tests/*
    tardis/*/tests/*
    tardis/extern/*
    tardis/version*
    */tardis/_astropy_init*
    */tardis/conftest.py
    */tardis/*setup_package*
    */tardis/tests/*
    */tardis/*/tests/*
    */tardis/extern/*
    */tardis/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[options.entry_points]
console_scripts =
    cmfgen2tardis = tardis.scripts.cmfgen2tardis:main
    tardis_test_runner = tardis.tests.integration_tests.runner:run_tests
