[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1


[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True
auto_upgrade = False

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py


[metadata]
package_name = tardis
description = TARDIS - Temperature And Radiative Diffusion In Supernovae
author = TARDIS Collaboration
author_email = wkerzendorf@gmail.com
license = BSD (3 clause)
url = http://tardis.readthedocs.org/
edit_on_github = True
github_project = tardis-sn/tardis
version = 3.0.dev
minimum_python_version = 3.6
install_requires = astropy








